bug fixes in about us page subscribe  button

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <div class="nav-header">
                 <div class="nav-title">
                     <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
-                    <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
+                    <!-- <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt=""> -->
                 </div>
                 <div class="nav-titleN nav-link">Defence Shorts</div>
             </div>
@@ -99,7 +99,8 @@
                 <h2>Subscribe</h2>
                 <div>
                     <input type="email" required placeholder="Your email id here" id="element" />
-                    <button type="button" id="contacts" onclick="">Subscribe</button>
+                    <button type="button" id="btn" onclick="">Subscribe</button>
+                    <div id="contacts"></div>
                 </div>
 
             </div>
