--- a/about.html
+++ b/about.html
@@ -7,13 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Defence Short</title>
     <!-- <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/about.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/nav.css">
     <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/about.css">
     <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/footer.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZzzLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
     <!--     <link rel="icon" type="image/x-icon" href="../Source/IMG/logo.jpg"> -->
     <style>
