remove the extra tags
In the 155 line there is div tag is add with subscribe text. Now tag is empty to make thing better

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div>
                     <input type="email" required placeholder="Your email id here" id="element" />
                     <button type="button" id="btn" onclick="">Subscribe</button>
-                    <div id="contacts">Subscribe</div>
+                    <div id="contacts"></div>
                 </div>
             </div>
         </div>
