Auto fetching lasted video from YT channel
Here i have just add the features to automatically get lasted video in iframe tag.
to know visit this blog post.
https://wickydesign.com/auto-embed-latest-videos-from-a-youtube-channel/

--- a/index.html
+++ b/index.html
@@ -75,31 +75,33 @@
 
             <h2>Our Lasted Uploads</h2>
             <div class="cover">
-                <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed/paK6W0EWIJ4"
+                <div class="item">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed?listType=playlist&list=UUzpGkJGCGGA106WJvxzc3lQ"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed?listType=playlist&list=UUzpGkJGCGGA106WJvxzc3lQ&index=2"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe></div>
-                <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed/EZ5QKsSCKg4"
+                <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed?listType=playlist&list=UUzpGkJGCGGA106WJvxzc3lQ&index=3"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe></div>
-                <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed/-iIfbtu5koU"
+                <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed?listType=playlist&list=UUzpGkJGCGGA106WJvxzc3lQ&index=4"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe></div>
-                <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed/I6Y95iAGaUI"
+                <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed?listType=playlist&list=UUzpGkJGCGGA106WJvxzc3lQ&index=5"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe></div>
-                <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed/gQwXmYGuyM0"
+                <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed?listType=playlist&list=UUzpGkJGCGGA106WJvxzc3lQ&index=6"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe></div>
-                <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed/HCFlxM8XY6c"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe></div>
-                <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed/N6ffa-s-21U"
+                <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed?listType=playlist&list=UUzpGkJGCGGA106WJvxzc3lQ&index=7"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe></div>
