--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,9 @@
             </div>
 
             <div class="nav-links">
-                <a href="https://vitthalgund.github.io/Defence-Shorts/index.html" target="_blank" class="nav-link nav-link-ltr">Home</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/index.html" class="nav-link nav-link-ltr">Home</a>
 <!--                 <a href="index.html" target="_blank" class="nav-link nav-link-ltr">Home</a> -->
-                <a href="https://vitthalgund.github.io/Defence-Shorts/about.html" target="_blank" class="nav-link nav-link-ltr">About Us</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/about.html" class="nav-link nav-link-ltr">About Us</a>
 <!--                 <a href="about.html" target="_blank" class="nav-link nav-link-ltr">About Us</a> -->
                 <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;"
                     class="nav-link nav-link-ltr">YouTube</a>
