--- a/about.html
+++ b/about.html
@@ -46,9 +46,9 @@
             </div>
 
             <div class="nav-links">
-                <a href="https://vitthalgund.github.io/Defence-Shorts/index.html" target="_blank" class="nav-link nav-link-ltr">Home</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/index.html" class="nav-link nav-link-ltr">Home</a>
 <!--                 <a href="index.html" target="_blank" class="nav-link nav-link-ltr">Home</a> -->
-                <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html" target="_blank" class="nav-link nav-link-ltr">Contact</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html" class="nav-link nav-link-ltr">Contact</a>
 <!--                 <a href="contact.html" target="_blank" class="nav-link nav-link-ltr">Contact</a> -->
                 <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;"
                     class="nav-link nav-link-ltr">YouTube</a>
