Update index.html target attribute was removed

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
             <div class="nav-links">
                 <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/about.html" target="_blank"
                     class="nav-link nav-link-ltr">About</a> -->
-                <a href="about.html" target="_blank" class="nav-link nav-link-ltr">About</a>
+                <a href="about.html" class="nav-link nav-link-ltr">About</a>
                 <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;"
                     class="nav-link nav-link-ltr">YouTube</a>
                 <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html" target="_blank"
                     class="nav-link nav-link-ltr">Contact</a> -->
-                <a href="contact.html" target="_blank" class="nav-link nav-link-ltr">Contact</a>
+                <a href="contact.html" class="nav-link nav-link-ltr">Contact</a>
             </div>
         </div>
     </nav>
