--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             <div class="nav-header">
                 <div class="nav-title">
                     <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
-                    <!-- <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt=""> -->
+                    <!-- <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="logo"> -->
                 </div>
                 <div class="nav-titleN nav-link">Defence Shorts</div>
             </div>
@@ -46,9 +46,9 @@
 
             <div class="nav-links">
                 <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/index.html" target="_blank">Home</a> -->
-                <a href="index.html" target="_blank" class="nav-link nav-link-ltr">Home</a>
+                <a href="index.html" class="nav-link nav-link-ltr">Home</a>
                 <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/about.html" target="_blank" >About Us</a> -->
-                <a href="about.html" target="_blank" class="nav-link nav-link-ltr">About Us</a>
+                <a href="about.html" class="nav-link nav-link-ltr">About Us</a>
                 <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;"
                     class="nav-link nav-link-ltr">YouTube</a>
             </div>
